Test/git-issues/git-issue-697c.dfy.expect
git-issue-697c.dfy(18,15): Error: EvenCell is a subset type and its constraint is not compilable, hence it cannot yet be used as the type of a bound variable in set comprehension. The constraint is not compilable because a call to a ghost function is allowed only in specification contexts (consider declaring the function without the 'ghost' keyword) git-issue-697c.dfy(9,26)
git-issue-697c.dfy(19,35): Error: EvenCell is a subset type and its constraint is not compilable, hence it cannot yet be used as the type of a bound variable in map comprehension. The constraint is not compilable because a call to a ghost function is allowed only in specification contexts (consider declaring the function without the 'ghost' keyword) git-issue-697c.dfy(9,26)
git-issue-697c.dfy(20,18): Error: EvenCell is a subset type and its constraint is not compilable, hence it cannot yet be used as the type of a bound variable in forall expression. The constraint is not compilable because a call to a ghost function is allowed only in specification contexts (consider declaring the function without the 'ghost' keyword) git-issue-697c.dfy(9,26)
3 resolution/type errors detected in git-issue-697c.dfy
